--- a/index.html
+++ b/index.html
@@ -231,10 +231,20 @@
             <ul class="main-nav">
 
                 <ul class="sub-nav">
-                    <li><a href="pages/advanced/storage.html">Browser Storage</a></li>
+                    <li><a href="pages/advanced/storage/storage.html">Browser Storage</a></li>
+                    <li><a href="pages/advanced/storage/indexeddb.html">IndexedDB</a></li>
 
                 </ul>
             </ul>
+
+
+
+
+
+
+
+
+
 
 
 
@@ -251,7 +261,7 @@
             <li><a href="examples/events/dropdown.html">Check dropdown option</a></li>
 
           </ul>
-  
+
 
 
 
