appending checkbox and remove button to page

--- a/index.html
+++ b/index.html
@@ -143,17 +143,18 @@
                         <li><a href="pages/dom/changing-css.html">Changing CSS</a></li>
                         <li><a href="pages/dom/adding-elements.html">Adding elements to the DOM</a></li>
                         <li>
-                        </ul>
+                    </ul>
 
-                        <h4>Events</h4>
-                      <ul></li>
+                    <h4>Events</h4>
+                    <ul>
+                        </li>
                         <li><a href="pages/events/events.html">Events</a></li>
                         <li><a href="pages/events/the-event-object.html">The Event Object</a></li>
                         <li><a href="pages/events/event-propagation.html">Event Propagation</a></li>
                         <li><a href="pages/events/stopping-an-event.html">Stopping an Event</a></li>
                     </ul>
 
-              </ul>
+                </ul>
             </nav>
 
 
@@ -226,14 +227,19 @@
 
 
             <p class="toc-heading1">Advanced</p>
-            <p class="toc-heading2">Storage</p>
+            <p class="toc-heading2">Debugging</p>
 
             <ul class="main-nav">
+                <ul class="sub-nav">
+                    <li><a href="pages/advanced/debugging/debugging.html">Debugging</a></li>
+                </ul>
+            </ul>
 
+            <p class="toc-heading2">Storage</p>
+            <ul class="main-nav">
                 <ul class="sub-nav">
                     <li><a href="pages/advanced/storage/storage.html">Browser Storage</a></li>
                     <li><a href="pages/advanced/storage/indexeddb.html">IndexedDB</a></li>
-
                 </ul>
             </ul>
 
@@ -246,21 +252,26 @@
 
 
 
-
-
-
             <p class="toc-heading1">Examples (small)</p>
+            <h3>DOM Rendering</h3>
+
+            <ul>
+                </li>
+                <li><a href="examples/domrendering/domrendering.html">DOM Rendering</a></li>
+              </ul>
+
             <h3>Events</h3>
 
-          <ul></li>
-            <li><a href="examples/events/print-searchbox-text-to-console.html">Print searchbox text to console</a></li>
-            <li><a href="examples/events/remove-element-on-button-click.html">Remove element on button click</a></li>
-            <li><a href="examples/events/change-text-of-button-when-clicked.html">Change text of button when clicked</a></li>
-            <li><a href="examples/events/clear-form-field-when-submit-is-clicked.html">Clear form field when submit is clicked</a></li>
-            <li><a href="examples/events/checkbox.html">Checkbox marks in JS as TRUE or FALSE</a></li>
-            <li><a href="examples/events/dropdown.html">Check dropdown option</a></li>
+            <ul>
+                </li>
+                <li><a href="examples/events/print-searchbox-text-to-console.html">Print searchbox text to console</a></li>
+                <li><a href="examples/events/remove-element-on-button-click.html">Remove element on button click</a></li>
+                <li><a href="examples/events/change-text-of-button-when-clicked.html">Change text of button when clicked</a></li>
+                <li><a href="examples/events/clear-form-field-when-submit-is-clicked.html">Clear form field when submit is clicked</a></li>
+                <li><a href="examples/events/checkbox.html">Checkbox marks in JS as TRUE or FALSE</a></li>
+                <li><a href="examples/events/dropdown.html">Check dropdown option</a></li>
 
-          </ul>
+            </ul>
 
 
 
@@ -277,6 +288,7 @@
 
             <h3>Note taking and Filter app</h3>
             <ul>
+              <li><a href="projects/live-filter-text/test/index.html">TEST page</a></li>
                 <li><a href="projects/live-filter-text/live-filter-text.html">Live Text Filter and display # of remaining Todos</a></li>
             </ul>
 
