--- a/projects/live-filter-text/test/index.html
+++ b/projects/live-filter-text/test/index.html
@@ -7,15 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" type="text/css" href="../_css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="../_css/style.css">
+    <link rel="stylesheet" type="text/css" href="../../../_css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="../../../_css/style.css">
 
 
     <title>Live Filter Text</title>
 </head>
 
 <body>
-    <a href="../index.html">Home page</a>
+    <a href="../../../index.html">Home page</a>
 
 
     <section class="container">
@@ -214,13 +214,32 @@ const renderNotes = function (x, y) {
     })
 }
 
-<span class="code-comment">//Get the DOM elements for an individual note</span>
+<span class="code-comment">//Print content to page</span>
 const generateTodoDOM = function(i) {
-  <span class="code-comment">//create new element</span>
-  const noteEl = document.createElement('p')
-  <span class="code-comment">//Set new element to the Object title property</span>
-  noteEl.textContent = i.title
-  return noteEl
+
+  <span class="code-comment">//Create a root div tag, this is what everything is appended to</span>
+  const todoEl = document.createElement('div')
+  <span class="code-comment">//Create checkbox</span>
+  const checkbox = document.createElement('input')
+  <span class="code-comment">//Create element for todo text</span>
+  const todoText = document.createElement('span')
+  <span class="code-comment">//Create remove button</span>
+  const removeButton = document.createElement('button')
+
+  <span class="code-comment">//set the checkbox</span>
+  checkbox.setAttribute('type', 'checkbox')
+  <span class="code-comment">//Print to page</span>
+  todoEl.appendChild(checkbox)
+  <span class="code-comment">//set todo text</span>
+  todoText.textContent = i.title
+  <span class="code-comment">//Print to page</span>
+  todoEl.appendChild(todoText)
+  <span class="code-comment">//set remove button</span>
+  removeButton.textContent = 'x'
+  <span class="code-comment">//print button to page</span>
+  todoEl.appendChild(removeButton)
+
+  return todoEl
 }
 
 <span class="code-comment">//Get the DOM elements for a list summary</span>
@@ -241,8 +260,8 @@ const generateSummaryDOM = function(incompleteTodos) {
 
 
 
-    <script src="../_js/jquery.js"></script>
-    <script src="../_js/bootstrap.bundle.js"></script>
+    <script src="../../../_js/jquery.js"></script>
+    <script src="../../../_js/bootstrap.bundle.js"></script>
 </body>
 
 </html>
