Added UUID info

--- a/index.html
+++ b/index.html
@@ -243,7 +243,13 @@
                 </ul>
             </ul>
 
+            <p class="toc-heading2">Misc</p>
 
+            <ul class="main-nav">
+                <ul class="sub-nav">
+                    <li><a href="pages/advanced/misc/uuid/uuid.html">UUID</a></li>
+                </ul>
+            </ul>
 
 
 
@@ -289,7 +295,7 @@
             <h3>Note taking and Filter app</h3>
             <ul>
               <li><a href="projects/live-filter-text/test/index.html">TEST page</a></li>
-                <li><a href="projects/live-filter-text/live-filter-text.html">Live Text Filter and display # of remaining Todos</a></li>
+                <li><a href="projects/live-filter-text/live-filter-text.html">Note taking app</a></li>
             </ul>
 
 
